ttrss/ttrss-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tt-rss-andreybondarenko-ingress
  namespace: tt-rss
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - tt-rss.andreybondarenko.com
      secretName: letsencrypt-tt-rss-prod
  rules:
    - host: tt-rss.andreybondarenko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: may-tt-rss
                port:
                  number: 8080
